maki/DevOps/Kubernetes/Topic_WebApi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapi-service
  namespace: dev
spec:
  selector:
    app: webapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer  # Use LoadBalancer to expose the service to the public network
